--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,10 +14,10 @@ services:
       - NODE_ENV=production
       - ME_CONFIG_MONGODB_SERVER=db
       - ME_CONFIG_MONGODB_ENABLE_ADMIN=TRUE
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-      - ME_CONFIG_BASICAUTH_USERNAME=${ME_CONFIG_BASICAUTH_USERNAME}
-      - ME_CONFIG_BASICAUTH_PASSWORD=${ME_CONFIG_BASICAUTH_PASSWORD}
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=${DB_USERNAME}
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=${DB_PASSWORD}
+      - ME_CONFIG_BASICAUTH_USERNAME=${ME_USERNAME}
+      - ME_CONFIG_BASICAUTH_PASSWORD=${ME_PASSWORD}
     depends_on:
       - db
 
@@ -27,5 +27,5 @@ services:
     volumes:
       - ./db:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${DB_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${DB_PASSWORD}
